// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippets routes GET /:id can get a full snippet by external ID 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "claimed": false,
  "creator": {
    "createdAt": "1970-01-01T00:00:00.010Z",
    "displayName": "Crasken",
    "id": "E21K9jm",
    "over18": false,
    "username": "crasken",
  },
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "interaction": null,
  "messages": [
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "k8LOd59",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content",
      "externalId": null,
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.010Z",
    },
  ],
  "nsfw": false,
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes GET /:id can get a snippet by external ID 1`] = `
{
  "app": null,
  "claimed": false,
  "creator": null,
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "interaction": null,
  "messages": null,
  "nsfw": false,
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes GET /preview can get last page of snippets 1`] = `
{
  "data": [],
  "isLastPage": true,
}
`;

exports[`snippets routes GET /preview can get paginated snippets 1`] = `
{
  "data": [],
  "isLastPage": true,
}
`;

exports[`snippets routes GET /preview can get paginated snippets after cursor 1`] = `
{
  "data": [],
  "isLastPage": true,
}
`;

exports[`snippets routes GET /preview can get when filtering by creator 1`] = `
{
  "data": [
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.245Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "WNoPYpZ",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.245Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "l2WWE2Z",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "B28Gm5b",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 49",
          "externalId": null,
          "id": "E4lZBrZ",
          "sentAt": "1970-01-01T00:00:00.490Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 49,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.240Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "9N6kwpj",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.240Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "QAYoMNr",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "VQbxe5b",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 48",
          "externalId": null,
          "id": "2MVZGMV",
          "sentAt": "1970-01-01T00:00:00.480Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 48,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.235Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "ZN5vVpR",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.235Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "1NvK7pd",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "z5alZLp",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 47",
          "externalId": null,
          "id": "wrL3pM8",
          "sentAt": "1970-01-01T00:00:00.470Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 47,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.230Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "V2OMZpJ",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.230Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "7AKWzA8",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "KLy7K2N",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 46",
          "externalId": null,
          "id": "7rE1Drv",
          "sentAt": "1970-01-01T00:00:00.460Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 46,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.225Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "Bp8X1pj",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.225Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "0AbyPpg",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "p5Km3Qb",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 45",
          "externalId": null,
          "id": "KM1kNX1",
          "sentAt": "1970-01-01T00:00:00.450Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 45,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.220Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "YAPX4AV",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.220Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "02VL8pd",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "8LOdd59",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 44",
          "externalId": null,
          "id": "GX8zzMN",
          "sentAt": "1970-01-01T00:00:00.440Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 44,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.215Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "RNMVmp4",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.215Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "1A4aM2q",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "75eEK5P",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 43",
          "externalId": null,
          "id": "bXqZn4e",
          "sentAt": "1970-01-01T00:00:00.430Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 43,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.210Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "opEZLAw",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.210Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "V2LExNb",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "9PQPALp",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 42",
          "externalId": null,
          "id": "AxMPArq",
          "sentAt": "1970-01-01T00:00:00.420Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 42,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.205Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "BAmYjAg",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.205Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "XNlB4AD",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "VXQYJLl",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 41",
          "externalId": null,
          "id": "eDMY7XO",
          "sentAt": "1970-01-01T00:00:00.410Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 41,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.200Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "nAD5W2q",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.200Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "b2JeGAe",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "lDQZGLZ",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 40",
          "externalId": null,
          "id": "0gMZjML",
          "sentAt": "1970-01-01T00:00:00.400Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
      "totalComments": 40,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.195Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "over18": false,
        "username": "crasken",
      },
      "creatorId": "E21K9jm",
      "id": "apz0m24",
      "interaction": {
        "views": 0,
      },
      "messages": [],
      "nsfw": true,
      "public": true,
      "title": "Test NSFW snippet title",
      "totalComments": 0,
    },
  ],
  "isLastPage": false,
}
`;

exports[`snippets routes GET /preview can get when filtering by creator 2`] = `
{
  "data": [
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.245Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "nABM8p0",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "75ePDLP",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 49",
          "externalId": null,
          "id": "bXql5re",
          "sentAt": "1970-01-01T00:00:00.490Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 49,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.240Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "YAgYlNQ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "7QXr35m",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 48",
          "externalId": null,
          "id": "KMxjBX8",
          "sentAt": "1970-01-01T00:00:00.480Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 48,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.235Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "GAxPgA9",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "m57v6LO",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 47",
          "externalId": null,
          "id": "BXwLe42",
          "sentAt": "1970-01-01T00:00:00.470Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 47,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.230Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "4Aq01pK",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "qQnX656",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 46",
          "externalId": null,
          "id": "PrOlQX6",
          "sentAt": "1970-01-01T00:00:00.460Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 46,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.225Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "rNXZaAV",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "g5m7gQ3",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 45",
          "externalId": null,
          "id": "q4Bxzr2",
          "sentAt": "1970-01-01T00:00:00.450Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 45,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.220Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "RpZxO2k",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "n5vbN5x",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 44",
          "externalId": null,
          "id": "ZXvNDXo",
          "sentAt": "1970-01-01T00:00:00.440Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 44,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.215Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "J2yDmA9",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "B28Pm2b",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 43",
          "externalId": null,
          "id": "E4lQBMZ",
          "sentAt": "1970-01-01T00:00:00.430Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 43,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.210Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "WNokYNZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "VQb3eLb",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 42",
          "externalId": null,
          "id": "2MVmG4V",
          "sentAt": "1970-01-01T00:00:00.420Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 42,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.205Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "l2WXENZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "z5aNZ2p",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 41",
          "externalId": null,
          "id": "wrLGpM8",
          "sentAt": "1970-01-01T00:00:00.410Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 41,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.200Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "VNePG2L",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "KLyOK2N",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 40",
          "externalId": null,
          "id": "7rEKD4v",
          "sentAt": "1970-01-01T00:00:00.400Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 40,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.195Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "9N6owpj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "p5K335b",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 39",
          "externalId": null,
          "id": "KM1NNr1",
          "sentAt": "1970-01-01T00:00:00.390Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 39,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.190Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "QAYxMpr",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "8LOxd59",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 38",
          "externalId": null,
          "id": "GX88zXN",
          "sentAt": "1970-01-01T00:00:00.380Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 38,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.185Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "nABMkp0",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "75ePKLP",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 37",
          "externalId": null,
          "id": "bXqlnre",
          "sentAt": "1970-01-01T00:00:00.370Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 37,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.180Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "ZN5PV2R",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "PQPnA5p",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 36",
          "externalId": null,
          "id": "xMPkA4q",
          "sentAt": "1970-01-01T00:00:00.360Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 36,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.175Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "1NvD7Ad",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "XQYyJQl",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 35",
          "externalId": null,
          "id": "DMY27rO",
          "sentAt": "1970-01-01T00:00:00.350Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 35,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.170Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "J2R3aNB",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "DQZjGQZ",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 34",
          "externalId": null,
          "id": "gMZQj4L",
          "sentAt": "1970-01-01T00:00:00.340Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 34,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.165Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "V2OjZAJ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "nL01X5z",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 33",
          "externalId": null,
          "id": "mr0oxMg",
          "sentAt": "1970-01-01T00:00:00.330Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 33,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.160Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "7AKDz28",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "GL91ALk",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 32",
          "externalId": null,
          "id": "ar91Arz",
          "sentAt": "1970-01-01T00:00:00.320Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 32,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.155Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "QNjBKNx",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "Z5W1aQ8",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 31",
          "externalId": null,
          "id": "3XWoLX8",
          "sentAt": "1970-01-01T00:00:00.310Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 31,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.150Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "Bp8E1Aj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "mQNA92e",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 30",
          "externalId": null,
          "id": "VMNq948",
          "sentAt": "1970-01-01T00:00:00.300Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 30,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.145Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "over18": false,
        "username": "bah",
      },
      "creatorId": "MBj8J1K",
      "id": "0AbPPNg",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "attachments": [
            {
              "filename": null,
              "height": 599,
              "id": "n51AZ5e",
              "size": null,
              "type": "photo",
              "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
              "width": 672,
            },
          ],
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 29",
          "externalId": null,
          "id": "3429ZX5",
          "sentAt": "1970-01-01T00:00:00.290Z",
        },
      ],
      "nsfw": false,
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 29,
    },
  ],
  "isLastPage": false,
}
`;

exports[`snippets routes GET /unreviewed can get last page of snippets 1`] = `
{
  "data": [
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.195Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "qpdXlpO",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.190Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "4AqE1AK",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.185Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "WNoPYpZ",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.180Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "QAYoMNr",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.175Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "J2R8apB",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.170Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "Bp8X1pj",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.165Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "02VL8pd",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.160Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "VNGrK2j",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.155Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "BAmYjAg",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.150Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "b2JeGAe",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.145Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "kA1Xrp3",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.140Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "qpd1lAO",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.135Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "4AqK1NK",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.130Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "WNoeYAZ",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.125Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "QAYXMpr",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.120Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "4AqKDNK",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.115Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "WNoeqAZ",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.110Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "QAYXLpr",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.105Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "J2Rjq2B",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.100Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "Bp8QWAj",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.095Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "02V8bpd",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
  ],
  "isLastPage": false,
}
`;

exports[`snippets routes GET /unreviewed can get paginated snippets 1`] = `
{
  "data": [
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.245Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "4Aq01pK",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.240Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "WNokYNZ",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.235Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "QAYxMpr",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.230Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "J2R3aNB",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.225Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "Bp8E1Aj",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.220Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "02VZ82d",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.215Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "VNGBK2j",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.210Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "BAmZj2g",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.205Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "b2JnG2e",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.200Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "kA16r23",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.195Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "qpdXlpO",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.190Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "4AqE1AK",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.185Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "WNoPYpZ",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.180Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "QAYoMNr",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.175Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "J2R8apB",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.170Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "Bp8X1pj",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.165Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "02VL8pd",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.160Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "VNGrK2j",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.155Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "BAmYjAg",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.150Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "b2JeGAe",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.145Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "kA1Xrp3",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
  ],
  "isLastPage": false,
}
`;

exports[`snippets routes GET /unreviewed can get paginated snippets after cursor 1`] = `
{
  "data": [
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.220Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "02VZ82d",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.215Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "VNGBK2j",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.210Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "BAmZj2g",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.205Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "b2JnG2e",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.200Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "kA16r23",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.195Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "qpdXlpO",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.190Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "4AqE1AK",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.185Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "WNoPYpZ",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.180Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "QAYoMNr",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.175Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "J2R8apB",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.170Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "Bp8X1pj",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.165Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "02VL8pd",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.160Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "VNGrK2j",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.155Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "BAmYjAg",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.150Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "b2JeGAe",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.145Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "kA1Xrp3",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.140Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "qpd1lAO",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.135Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "4AqK1NK",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.130Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "WNoeYAZ",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.125Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "QAYXMpr",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
    {
      "app": null,
      "claimed": false,
      "createdAt": "1970-01-01T00:00:00.120Z",
      "creator": null,
      "creatorId": "E21K9jm",
      "id": "4AqKDNK",
      "interaction": null,
      "messages": null,
      "nsfw": false,
      "public": true,
      "title": "Test snippet title",
    },
  ],
  "isLastPage": false,
}
`;

exports[`snippets routes POST / can create a snippet with auth 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "claimed": false,
  "creator": {
    "createdAt": "1970-01-01T00:00:00.010Z",
    "displayName": "Crasken",
    "id": "E21K9jm",
    "over18": false,
    "username": "crasken",
  },
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "interaction": {
    "views": 0,
  },
  "messages": [
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "k8LOd59",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 0",
      "externalId": null,
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.000Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Ep5K35b",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 1",
      "externalId": null,
      "id": "WKM1Nr1",
      "sentAt": "1970-01-01T00:00:00.005Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "BKLyK2N",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 2",
      "externalId": null,
      "id": "E7rEDMv",
      "sentAt": "1970-01-01T00:00:00.010Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "vz5aZ2p",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 3",
      "externalId": null,
      "id": "pwrLpr8",
      "sentAt": "1970-01-01T00:00:00.015Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "mVQbe2b",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 4",
      "externalId": null,
      "id": "R2MVGrV",
      "sentAt": "1970-01-01T00:00:00.020Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "GB28mQb",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 5",
      "externalId": null,
      "id": "GE4lBrZ",
      "sentAt": "1970-01-01T00:00:00.025Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Mn5vN5x",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 6",
      "externalId": null,
      "id": "NZXvDMo",
      "sentAt": "1970-01-01T00:00:00.030Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "kg5mgQ3",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 7",
      "externalId": null,
      "id": "wq4Bz42",
      "sentAt": "1970-01-01T00:00:00.035Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "ZqQn6Q6",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 8",
      "externalId": null,
      "id": "oPrOQ46",
      "sentAt": "1970-01-01T00:00:00.040Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Jm576LO",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 9",
      "externalId": null,
      "id": "nBXweM2",
      "sentAt": "1970-01-01T00:00:00.045Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "y7QX32m",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 10",
      "externalId": null,
      "id": "gKMxBX8",
      "sentAt": "1970-01-01T00:00:00.050Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "kq2Vm5d",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 11",
      "externalId": null,
      "id": "EQXQqX7",
      "sentAt": "1970-01-01T00:00:00.055Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "zA5pY20",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 12",
      "externalId": null,
      "id": "K2rka49",
      "sentAt": "1970-01-01T00:00:00.060Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "MaLJ82N",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 13",
      "externalId": null,
      "id": "a1X7l43",
      "sentAt": "1970-01-01T00:00:00.065Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "aWQdk24",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 14",
      "externalId": null,
      "id": "gJXn0Me",
      "sentAt": "1970-01-01T00:00:00.070Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Y1Lx0Lp",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 15",
      "externalId": null,
      "id": "6746Z4j",
      "sentAt": "1970-01-01T00:00:00.075Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "g3Qz92r",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 16",
      "externalId": null,
      "id": "p845A4a",
      "sentAt": "1970-01-01T00:00:00.080Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Dz24o5Y",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 17",
      "externalId": null,
      "id": "Y0rJbrp",
      "sentAt": "1970-01-01T00:00:00.085Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "meQlb5E",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 18",
      "externalId": null,
      "id": "nxMD6Xy",
      "sentAt": "1970-01-01T00:00:00.090Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "kZQkpL1",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 19",
      "externalId": null,
      "id": "LR4bLrz",
      "sentAt": "1970-01-01T00:00:00.095Z",
    },
  ],
  "nsfw": false,
  "public": false,
  "title": null,
}
`;

exports[`snippets routes POST / can create a snippet with empty content message 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "claimed": false,
  "creator": {
    "createdAt": "1970-01-01T00:00:00.010Z",
    "displayName": "Crasken",
    "id": "E21K9jm",
    "over18": false,
    "username": "crasken",
  },
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "interaction": {
    "views": 0,
  },
  "messages": [
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "k8LOd59",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "",
      "externalId": null,
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.005Z",
    },
  ],
  "nsfw": false,
  "public": false,
  "title": null,
}
`;

exports[`snippets routes POST / can create a snippet with no auth 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "claimed": false,
  "creator": null,
  "creatorId": null,
  "id": "BQAYLpr",
  "interaction": {
    "views": 0,
  },
  "messages": [
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "k8LOd59",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 0",
      "externalId": null,
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.000Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Ep5K35b",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 1",
      "externalId": null,
      "id": "WKM1Nr1",
      "sentAt": "1970-01-01T00:00:00.005Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "BKLyK2N",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 2",
      "externalId": null,
      "id": "E7rEDMv",
      "sentAt": "1970-01-01T00:00:00.010Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "vz5aZ2p",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 3",
      "externalId": null,
      "id": "pwrLpr8",
      "sentAt": "1970-01-01T00:00:00.015Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "mVQbe2b",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 4",
      "externalId": null,
      "id": "R2MVGrV",
      "sentAt": "1970-01-01T00:00:00.020Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "GB28mQb",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 5",
      "externalId": null,
      "id": "GE4lBrZ",
      "sentAt": "1970-01-01T00:00:00.025Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Mn5vN5x",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 6",
      "externalId": null,
      "id": "NZXvDMo",
      "sentAt": "1970-01-01T00:00:00.030Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "kg5mgQ3",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 7",
      "externalId": null,
      "id": "wq4Bz42",
      "sentAt": "1970-01-01T00:00:00.035Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "ZqQn6Q6",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 8",
      "externalId": null,
      "id": "oPrOQ46",
      "sentAt": "1970-01-01T00:00:00.040Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Jm576LO",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 9",
      "externalId": null,
      "id": "nBXweM2",
      "sentAt": "1970-01-01T00:00:00.045Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "y7QX32m",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 10",
      "externalId": null,
      "id": "gKMxBX8",
      "sentAt": "1970-01-01T00:00:00.050Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "kq2Vm5d",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 11",
      "externalId": null,
      "id": "EQXQqX7",
      "sentAt": "1970-01-01T00:00:00.055Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "zA5pY20",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 12",
      "externalId": null,
      "id": "K2rka49",
      "sentAt": "1970-01-01T00:00:00.060Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "MaLJ82N",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 13",
      "externalId": null,
      "id": "a1X7l43",
      "sentAt": "1970-01-01T00:00:00.065Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "aWQdk24",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 14",
      "externalId": null,
      "id": "gJXn0Me",
      "sentAt": "1970-01-01T00:00:00.070Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Y1Lx0Lp",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 15",
      "externalId": null,
      "id": "6746Z4j",
      "sentAt": "1970-01-01T00:00:00.075Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "g3Qz92r",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 16",
      "externalId": null,
      "id": "p845A4a",
      "sentAt": "1970-01-01T00:00:00.080Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "Dz24o5Y",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 17",
      "externalId": null,
      "id": "Y0rJbrp",
      "sentAt": "1970-01-01T00:00:00.085Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "meQlb5E",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 18",
      "externalId": null,
      "id": "nxMD6Xy",
      "sentAt": "1970-01-01T00:00:00.090Z",
    },
    {
      "attachments": [
        {
          "filename": null,
          "height": 599,
          "id": "kZQkpL1",
          "size": null,
          "type": "photo",
          "url": "https://pbs.twimg.com/media/FewPHITXkAANNAN.jpg",
          "width": 672,
        },
      ],
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 19",
      "externalId": null,
      "id": "LR4bLrz",
      "sentAt": "1970-01-01T00:00:00.095Z",
    },
  ],
  "nsfw": false,
  "public": false,
  "title": null,
}
`;

exports[`snippets routes POST / can create a snippet with no auth 2`] = `
{
  "adminApproved": false,
  "adminReviewed": false,
  "appId": 1,
  "claimed": false,
  "creatorId": null,
  "id": 1,
  "nsfw": false,
  "public": false,
  "title": null,
}
`;

exports[`snippets routes POST /:id can make a snippet public 1`] = `
{
  "app": null,
  "claimed": false,
  "creator": null,
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "interaction": null,
  "messages": null,
  "nsfw": false,
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST /:id can make a snippet public 2`] = `
{
  "adminApproved": false,
  "adminReviewed": false,
  "appId": 1,
  "claimed": false,
  "creatorId": 1,
  "id": 1,
  "nsfw": false,
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST /:id can mark a snippet nsfw 1`] = `
{
  "app": null,
  "claimed": false,
  "creator": null,
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "interaction": null,
  "messages": null,
  "nsfw": true,
  "public": false,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST /:id can mark a snippet nsfw 2`] = `
{
  "adminApproved": false,
  "adminReviewed": false,
  "appId": 1,
  "claimed": false,
  "creatorId": 1,
  "id": 1,
  "nsfw": true,
  "public": false,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST /:id can update a snippet title 1`] = `
{
  "app": null,
  "claimed": false,
  "creator": null,
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "interaction": null,
  "messages": null,
  "nsfw": false,
  "public": false,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST /:id can update a snippet title 2`] = `
{
  "adminApproved": false,
  "adminReviewed": false,
  "appId": 1,
  "claimed": false,
  "creatorId": 1,
  "id": 1,
  "nsfw": false,
  "public": false,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST /:id/claim can claim a snippet by external ID 1`] = `
{
  "adminApproved": false,
  "adminReviewed": false,
  "appId": 1,
  "claimed": true,
  "creatorId": 1,
  "id": 1,
  "nsfw": false,
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST /:id/claim can claim a snippet by external ID when authorized 1`] = `
{
  "adminApproved": false,
  "adminReviewed": false,
  "appId": 1,
  "claimed": true,
  "creatorId": 1,
  "id": 1,
  "nsfw": false,
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST /:id/review can approve a snippet by external ID 1`] = `
{
  "adminApproved": true,
  "adminReviewed": true,
  "appId": 1,
  "claimed": false,
  "creatorId": 1,
  "id": 1,
  "nsfw": false,
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST /:id/review can disapprove a snippet by external ID 1`] = `
{
  "adminApproved": false,
  "adminReviewed": true,
  "appId": 1,
  "claimed": false,
  "creatorId": 1,
  "id": 1,
  "nsfw": false,
  "public": true,
  "title": "Test snippet title",
}
`;
